--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <!--<link rel="stylesheet" href="%PUBLIC_URL%/skeleton.css">-->
 
     <!--- fonts --->
-    <link href='https://fonts.googleapis.com/css?family=Linux+Libertine:400,400i,700,700i|Rosarivo:400,400italic|Roboto:300|Lato:400' rel='stylesheet' type='text/css'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Linux+Libertine:400,400i,700,700i|Rosarivo:400,400italic|Roboto:300|Lato:400' rel='stylesheet' type='text/css'> -->
 
     <!--
       manifest.json provides metadata used when your web app is added to the
