--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--<link rel="stylesheet" href="%PUBLIC_URL%/normalize.css">-->
-    <!--<link rel="stylesheet" href="%PUBLIC_URL%/skeleton.css">-->
+    <link rel="stylesheet" href="%PUBLIC_URL%/skeleton.css">
 
     <!--- fonts --->
-    <!-- <link href='https://fonts.googleapis.com/css?family=Linux+Libertine:400,400i,700,700i|Rosarivo:400,400italic|Roboto:300|Lato:400' rel='stylesheet' type='text/css'> -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Open+Sans:wght@300;400&family=Raleway&display=swap" rel="stylesheet">
 
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -28,19 +28,44 @@
     <title>Coronavirus Soundscapes</title>
   </head>
   <body>
+    <div class="text-container">
+      <h2>Experimentación sonora con un</h2>
+      <h1>modelo epidemiológico del coronavirus</h1>
+      &nbsp;
+      <div class="video-holder">
+          <div class="video-container">
+              <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Nkj1VIfl4lU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+      </div>
+      &nbsp;
+      <p>
+          La pandemia ha puesto en evidencia las relaciones que existen entre todas las escalas naturales. El virus partiendo desde su tamaño microscópico utiliza a las personas —que pueden ser pensadas como una escala intermedia— como medio de transmisión generando consecuencias a la escala macroscópica social y mundial.
+      </p>
+      &nbsp;
+      <p>
+          Lo interesante es que las reglas que determinan el comportamiento del virus son simples a todas las escalas, esto es desde la manera en que el virus se reproduce entre células así como también se contagia entre personas. Socialmente el individuo puede ser pensado entonces como el gránulo generador de esas dinámicas del virus y sus decisiones tienen por lo tanto impacto en las consecuencias globales.   
+      </p>
+      &nbsp;
+      <p>
+          ¿Cómo podemos tomar esas decisiones o pensar el virus si de verdad no entendemos bien cuáles son las consecuencias de las decisiones que tomamos respecto a este? Esta intervención es una metáfora sonora que comunica de manera orgánica y sensorial a través del sonido las relaciones y conexiones existentes entre las escalas naturales expuestas por la evolución y propagación del virus.
+      </p>
+      &nbsp;
+      <h3>
+          ¿Cómo funciona?
+      </h3>
+      &nbsp;
+      <p>
+          Se puede pensar en una conexión entre la síntesis aditiva y el modelo de la epidemia. Por un lado la síntesis aditiva piensa el sonido como un conjunto de elementos con sonoridad propia que al unirse generan texturas sonoras complejas. De la misma manera podemos pensarnos como individuos en sociedad: somos las unidades básicas del tejido social y cada una de nuestras decisiones afecta la dinámica macroscópica de la sociedad como conjunto. Así, con esta relación entre elemento sonoro e individuo como átomo social podemos pensar al modelo epidemiológico del virus como el agente creador de esta pieza sonora.
+      </p>
+      &nbsp;
+      <p>
+          Son los estado de cada individuo y sus interacciones los que definen la dinámica particular del virus en la sociedad y por ende la complejidad o la estructura del sonido generado a partir de este modelo. Es decir, el modelo epidemiológico del virus es en esta obra el generador de la síntesis sonora. Esta relación entre sonido y propagación del virus puede ser explorada usando la siguiente aplicación interactiva que fue utilizada en la composición final de la obra. Todos los sonidos de esta intervención provienen de allí.
+      </p>
+    <!-- React App -->
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    </div>
   </body>
 </html>
